--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,6 @@ code     {
   source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
